color changing works

--- a/src/main/resources/static/shop.html
+++ b/src/main/resources/static/shop.html
@@ -7,6 +7,8 @@
 <script src="js/cookieFactory.js"></script>
 <script src="js/postUser.js"></script>
 <script src="js/buyStyles.js"></script>
+<script src="js/buyCoins.js"></script>
+
 
 
 </head>
