--- a/src/main/resources/static/ticTacToe.html
+++ b/src/main/resources/static/ticTacToe.html
@@ -7,13 +7,12 @@
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="js/postGame.js"></script>
 <script type="text/javascript" src="js/ticTacToe.js"></script>
 <script src="../js/getTopScores.js"></script>
-
 <script src="js/cookieFactory.js"></script>
-
+<script src="js/fancyStyle.js"></script>
 <style>
 	input.tictac {
 		font-size: 48px;
@@ -24,6 +23,23 @@
 		width: 80px;
 		height: 80px;
 		line-height: 80px;
+	}
+	.rainbow {
+	  background-image: -webkit-gradient( linear, left top, right top, color-stop(0, #f22), color-stop(0.15, #f2f), color-stop(0.3, #22f), color-stop(0.45, #2ff), color-stop(0.6, #2f2),color-stop(0.75, #2f2), color-stop(0.9, #ff2), color-stop(1, #f22) );
+	  background-image: gradient( linear, left top, right top, color-stop(0, #f22), color-stop(0.15, #f2f), color-stop(0.3, #22f), color-stop(0.45, #2ff), color-stop(0.6, #2f2),color-stop(0.75, #2f2), color-stop(0.9, #ff2), color-stop(1, #f22) );
+	  color:transparent;
+	  -webkit-background-clip: text;
+	  background-clip: text;
+	}
+	.flash {
+	  -webkit-animation: rainbow 1s infinite; 
+	}
+	@-webkit-keyframes flash{
+		20%{color: red;}
+		40%{color: yellow;}
+		60%{color: green;}
+		80%{color: blue;}
+		100%{color: orange;}	
 	}
 </style>
 
@@ -76,11 +92,11 @@
   			 <table>
   				 <tbody ng-repeat="score in topscores">
 					<tr>
-  			 			<td ng-style="setColor(score)">{{score.user.username}}</td>
+  			 			<td ng-style=setSimple(score)><span ng-class=setFancy(score)>{{score.user.username}}</span></td>
   			 			<td>&ensp;</td>
   						 <td>{{score.score}}</td>
 	  					<td ng-show="$first">
-  						 	<i class="fa fa-trophy" aria-hidden="true">
+  						 	<i class="fa fa-trophy" aria-hidden="true"></i>
   						 </td>
   					 </tr>
 				<tbody>
@@ -89,7 +105,6 @@
 		</div>
 	</div>
 </div>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 </body>
