added soem small things

--- a/src/main/resources/static/shop.html
+++ b/src/main/resources/static/shop.html
@@ -75,12 +75,20 @@
 				<button type=button onclick="buyFancyColor()" class="btn btn-primary">Buy fancy color</button>
 				<br>
 				<br>	
-			<h2>Purchase effect - 500 coins</h2>
+			<h2>Purchase pulse effect - 500 coins</h2>
 				<select id="effect">
 					<option value='NULL' selected="selected">No effect</option>
 					<option value='pulsate'>Pulsate</option>
 				</select>
-				<button type=button onclick="buyEffect()" class="btn btn-primary">Buy effect</button>							
+				<button type=button onclick="buyEffect()" class="btn btn-primary">Buy effect</button>
+			<h2>Purchase flash effect - 500 coins</h2>
+				<select id="effect">
+					<option value='NULL' selected="selected">No flash</option>
+					<option value='flash'>Flash</option>
+				</select>
+				<button type=button onclick="buyFlash()" class="btn btn-primary">Buy flash</button>		
+				<br>
+				<br>					
 				<h4>Shadow effects</h4>
 				<a style="text-shadow: 2px 2px black;" href="javascript:alert('Bought style');">SHADOW STYLE I</a><br>
 				<a style="text-shadow: 2px 2px blue;" href="javascript:alert('Bought style');">SHADOW STYLE II</a><br>
