Added flash effect, old vesrion of website works, one page doesn't

--- a/src/main/resources/static/shop.html
+++ b/src/main/resources/static/shop.html
@@ -48,11 +48,11 @@
 			<h2>Purchase simple color - 50 coins</h2>
 				<select id="color">
 					<option value="NULL" selected="selected">No color</option>
-					<option value="blue" style="color:blue">Blue</option>
-					<option value="red" style="color:red">Red</option>
-					<option value="purple" style="color:purple">Purple</option>
-					<option value="yellow" style="color:yellow">Yellow</option>
-					<option value="pink" style="color:pink">Pink</option>
+					<option value="red">Red</option>
+					<option value="yellow">Yellow</option>
+					<option value="green">Green</option>
+					<option value="blue">Blue</option>
+					<option value="orange">Orange</option>
 				</select><br>
 				<button type=button onclick="buySimpleColor()" class="btn btn-primary">Buy simple color</button>
 				<br>
@@ -60,31 +60,31 @@
 			<h2>Purchase simple style - 100 coins</h2>
 				<select id="style">
 					<option value="NULL" selected="selected">No style</option>
-					<option value='bold' style="font-weight:bold">Bold</option>
-					<option value="oblique" style="font-style:oblique">Oblique</option>
-					<option value="underline" style="text-decoration:underline">Underline</option>
+					<option value="bold">Bold</option>
+					<option value="oblique">Italic</option>
+					<option value="underline">Underline</option>
 				</select>
 				<button type=button onclick="buySimpleStyle()" class="btn btn-primary">Buy simple style</button>
 				<br>
 				<br>
 			<h2>Purchase fancy style - 500 coins</h2>
 				<select id="fancy">
-					<option value='NULL' selected="selected">No fancy color</option>
-					<option value='rainbow'>Rainbow</option>
+					<option value="NULL" selected="selected">No fancy color</option>
+					<option value="rainbow">Rainbow</option>
 				</select>
 				<button type=button onclick="buyFancyColor()" class="btn btn-primary">Buy fancy color</button>
 				<br>
 				<br>	
 			<h2>Purchase pulse effect - 500 coins</h2>
 				<select id="effect">
-					<option value='NULL' selected="selected">No effect</option>
-					<option value='pulsate'>Pulsate</option>
+					<option value="NULL" selected="selected">No effect</option>
+					<option value="pulsate">Pulsate</option>
 				</select>
 				<button type=button onclick="buyEffect()" class="btn btn-primary">Buy effect</button>
-			<h2>Purchase flash effect - 500 coins</h2>
-				<select id="effect">
-					<option value='NULL' selected="selected">No flash</option>
-					<option value='flash'>Flash</option>
+			<h2>Purchase flash effect - 1000 coins</h2>
+				<select id="flash">
+					<option value="NULL" selected="selected">No flash</option>
+					<option value="flash">Flash</option>
 				</select>
 				<button type=button onclick="buyFlash()" class="btn btn-primary">Buy flash</button>		
 				<br>
