--- a/src/main/resources/static/ticTacToe.html
+++ b/src/main/resources/static/ticTacToe.html
@@ -32,7 +32,7 @@
 	  background-clip: text;
 	}
 	.flash {
-	  -webkit-animation: rainbow 1s infinite; 
+	  -webkit-animation: flash 1s infinite; 
 	}
 	@-webkit-keyframes flash{
 		20%{color: red;}
