--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,14 +11,16 @@
 	
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"></link>
 	
-	<!-- AngularJS -->
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
-	
 	<!-- JQuery -->
 	<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
 	
 	<!-- JQuery UI -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+	
+	
+	
+		<!-- AngularJS -->
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 	
 	<script
 		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
@@ -149,7 +151,7 @@
 				<ul class="navbar-nav">
 					<li class="navbar-item"><a class="navbar-brand"
 						href="#homepage">Home</a></li>
-					<li class="nav-item isOnlyShownWhenLoggedIn"><a
+					<li ng-click = app() id="tictactoe" class="nav-item isOnlyShownWhenLoggedIn"><a
 						class="nav-link" href="#tictactoepage">Tic Tac Toe</a></li>
 					<li class="nav-item isOnlyShownWhenLoggedIn"><a
 						class="nav-link" href=#tetrispage>Tetris</a></li>
@@ -189,7 +191,7 @@
 				</div>
 			</div>
 		</div>
-	
+		<div  ng-app="myApp2">
 		<!-- TETRIS -->
 		<div id="tetrispage">
 			<div class="jumbotron jumbotron-fluid">
@@ -218,7 +220,7 @@
 						</div>
 					</div>
 					<div class="col-md-2">
-						<div ng-app="myApp2" ng-controller="myCtrl2">
+						<div ng-controller="myCtrl2" game="TETRIS">
 							<h4 id="highscoresTETRIS">Highscores</h4>
 							<table>
 								<tbody ng-repeat="score in topscores">
@@ -610,7 +612,8 @@
 				function drawNext() {
 				  if (invalid.next) {
 					var padding = (nu - next.type.size) / 2; // half-arsed attempt at
-																// centering next piece
+					</div>
+										// centering next piece
 																// display
 					uctx.save();
 					uctx.translate(0.5, 0.5);
@@ -679,6 +682,7 @@
 						
 					<div class="col-md-2">
 						<h4 id ="highscoresTICTACTOE">Highscores</h4>
+						<div ng-controller="myCtrl2" game="TIC_TAC_TOE")">
 						<table>
 							<tbody ng-repeat="score in topscores">
 								<tr>
@@ -691,10 +695,13 @@
 								</tr>
 							</tbody>
 						</table>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+	</div>
+		
 			
 		<!-- SHOP -->	
 		<div id="shoppage">
