Breakout game working in NewFile.html

--- a/src/main/resources/static/tetris.html
+++ b/src/main/resources/static/tetris.html
@@ -2,13 +2,14 @@
 <html>
 <head>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
-
-	<script src="../js/cookieFactory.js"></script>
- 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="../js/postGame.js"></script>
-	<script src="../js/getTopScores.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+	<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+	<script src="js/postGame.js"></script>
+	<script src="js/ticTacToe.js"></script>
+	<script src="../js/getTopScores.js"></script>
+	<script src="js/cookieFactory.js"></script>
+	<script src="js/fancyStyle.js"></script>
 	
   <title>Javascript Tetris</title>
   <style>
@@ -73,7 +74,7 @@
   				 <tbody ng-repeat="score in topscores">
   				 
 					<tr>
-  			 			<td ng-style="setSimple(score)">{{score.user.username}}</td>
+  			 			<td ng-style=setSimple(score)><span ng-class=setFancy(score)>{{score.user.username}}</span></td>
   			 			<td>&ensp;</td>
   						 <td>{{score.score}}</td>
 	  					<td ng-show="$first">
