--- a/src/main/resources/static/ticTacToe.html
+++ b/src/main/resources/static/ticTacToe.html
@@ -3,13 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>Tic Tac Toe</title>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
-
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script type="text/javascript" src="js/postGame.js"></script>
-<script type="text/javascript" src="js/ticTacToe.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+<script src="js/postGame.js"></script>
+<script src="js/ticTacToe.js"></script>
 <script src="../js/getTopScores.js"></script>
 <script src="js/cookieFactory.js"></script>
 <script src="js/fancyStyle.js"></script>
