--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -41,6 +41,7 @@
 	<script src="../js/getInformationAndStatistics.js"></script>
 	<script src="../js/getTopScores.js"></script>
 	<script src="../js/getUser.js"></script>
+	<script src="../js/handleCoins.js"></script>	
 	<script src="../js/hidePageElements.js"></script>
 	<script src="../js/logout.js"></script>
 	<script src="../js/postGame.js"></script>
